change root  relative paths

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <main class="container">
    <div class="recipe-image">
-     <img src="/assets/images/image-omelette.jpeg" alt="Omelette on a plate with garnish">
+     <img src="./assets/images/image-omelette.jpeg" alt="Omelette on a plate with garnish">
      <h1 class="recipe-title">Simple Omelette Recipe</h1>
      <p class="recipe-description">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
      <div class="prep-time">
